Trying to fix overlap

--- a/css/main.css
+++ b/css/main.css
@@ -1257,4 +1257,8 @@ header .seperator-skew svg .fill-white {
     height: auto;
     padding: 10px;
   }
+
+  .intro {
+    margin-top: 120px; /* Adjust value as needed for smaller screens */
+  }
 }
